--- a/NotlyNote/NotlyNote.csproj
+++ b/NotlyNote/NotlyNote.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MyUser.cs" />
+    <Compile Include="NoteBook.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
